--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>PYTHON</span> <span class="pull-right">85%</span>
+									<span>Python</span> <span class="pull-right">85%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -285,7 +285,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Spanish, Telugu</span></li>
 									<!--<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp; Tableau</span></li>-->
-									<li class="d-flex"><span>Other Skills:</span> <span>pyhton, Git, javaScript, reactJS, nodeJS,DSA</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Pyhton, Git, javaScript, reactJS, NodeJS,DSA</span></li>
 									<!--<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography, Teaching</span></li>-->
 									
 								</ul>
@@ -317,7 +317,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>expertise in ,reactJS, NodeJS, data science, machine learning</p>
+            <p>expertise in ,ReactJS, NodeJS, Data Science, Machine Learning</p>
           </div>
         </div>
 
