--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     					<span class="date">2022-2026</span>
     					<h2>Bachelor of Engineering</h2>
     					<span class="position">Rajeev Gandhi Memorial College Of Engineering And technology</span>
-    					<p class="mt-4">Grade: First class distinction.</p>
+    					<p class="mt-4">CGPA: 8.92 (as of now)</p>
     				</div>
     			</div>
 
@@ -385,7 +385,7 @@
     					<span class="date">2019-2020</span>
     					<h2>Higher Secondary School</h2>
     					<span class="position">AP Model School</span>
-    					<p class="mt-4">Grade: First class distinction.</p>
+    					<p class="mt-4">CGPA: 10.</p>
     				</div>
 				</div>
     		</div>
