--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     					<span class="date">2019-2020</span>
     					<h2>Higher Secondary School</h2>
     					<span class="position">AP Model School</span>
-    					<p class="mt-4">CGPA: 10.</p>
+    					<p class="mt-4">CGPA: 10.0</p>
     				</div>
 				</div>
     		</div>
