--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 									<!--<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>-->
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Spanish, Telugu</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Pyhton, Git, javaScript, ReactJS, NodeJS,DSA</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Pyhton, Git, javaScript,NodeJS,DSA</span></li>
 									
 									
 								</ul>
