--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>A Engineering Student</h2>
+			            <h2>An Engineering Student</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><!--<a href="https://www.youtube.com/@RishabhMishraOfficial" class="btn btn-primary py-3 px-4">YouTube</a> -->
@@ -282,9 +282,9 @@
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<!--<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>-->
 									<!--<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>-->
-									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
+									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Spanish, Telugu</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Pyhton, Git, javaScript, ReactJS, NodeJS, DSA</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Python, Git, javaScript, ReactJS, NodeJS, DSA</span></li>
 									
 									
 								</ul>
@@ -316,7 +316,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>expertise in ,ReactJS, NodeJS, Data Science, Machine Learning</p>
+            <p>expertise in ReactJS, NodeJS, Data Science, Machine Learning</p>
           </div>
         </div>
 
@@ -373,9 +373,18 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2022-2026</span>
-    					<h2>Bachelor of Engineering</h2>
+    					<h2>Bachelor of Technology</h2>
     					<span class="position">Rajeev Gandhi Memorial College Of Engineering And technology</span>
     					<p class="mt-4">CGPA: 8.92 (as of now)</p>
+    				</div>
+    			</div>
+
+				<div class="col-md-6">
+    				<div class="resume-wrap ftco-animate">
+    					<span class="date">2020-2022</span>
+    					<h2>Pre University Course</h2>
+    					<span class="position">Rajeev Gandhi University of Knowledge technologies RK-Valley</span>
+    					<p class="mt-4">CGPA: 8.9</p>
     				</div>
     			</div>
 
@@ -405,7 +414,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Projects</p>
+            <p>Below are the Projects</p>
           </div>
         </div>
         <div class="row d-flex">
