--- a/index.html
+++ b/index.html
@@ -284,13 +284,7 @@
 									<!--<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>-->
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Spanish, Telugu</span></li>
-<<<<<<< HEAD
 									<li class="d-flex"><span>Other Skills:</span> <span>Python, Git, javaScript, ReactJS, NodeJS, DSA</span></li>
-=======
-									<li class="d-flex"><span>Other Skills:</span> <span>Pyhton, Git, javaScript, ReactJs, NodeJS, DSA</span></li>
->>>>>>> 8ca0eb215d057e9d06505ea189d659fb060f66de
-									
-									
 								</ul>
 							</div>
 						</div>
@@ -451,7 +445,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="#">BigMart Predictive Analytics</a></h3>
-                <p>Accrately predict daily sales for Big Mart stores using historical data and influencing factors.</p>
+                <p>Accurately predict daily sales for Big Mart stores using historical data and influencing factors.</p>
               </div>
             </div>
           </div>
